<resources>
    <string name="app_name">ITS Visualizer</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="server_ip_address">Server IP address</string>
    <string name="server_port">Port</string>
    <string name="delete_old_messages_after">Delete old messages after</string>
    <string name="time_period">Time period</string>
    <string name="delete_messages_older_than">Automatically delete old messages every</string>
    <string name="save">Save settings</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="disconnected">Disconnected</string>
    <string name="perm_disabled_title">Permission Required</string>
    <string name="perm_disabled_text">Location permissions are required to use this app, please enable them in settings.</string>
    <string name="cancel">Cancel</string>
    <string name="title_placeholder">TITLE PLACEHOLDER</string>
    <string name="speed">Speed</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="heading">Heading</string>
    <string name="dimensions">Dimensions</string>
    <string name="vehicle_role">Vehicle Role</string>
    <string name="denm">DENM</string>
    <string name="srem">SREM</string>
    <string name="ssem">SSEM</string>
    <string name="movement_state">Movement state</string>
    <string name="min">Min</string>
    <string name="val">01:23.4</string>
    <string name="max">Max</string>
    <string name="likely">Likely</string>
    <string name="confidence">Confidence</string>
    <string name="server_setup">Server settings</string>
    <string name="warning_disabling_automatic_message_deletion_may_result_in_performance_issues">Warning! Disabling automatic message deletion may result in performance issues!</string>
    <string name="map_settings">Map settings</string>
    <string name="map_theme">Map theme</string>
    <string name="theme">Theme</string>
    <string name="show_3d_building_exteriors">Show 3D building exteriors</string>
    <string name="_3d_building_exterior_opacity">3D building exterior opacity</string>
    <string name="opacity">Opacity</string>
    <string name="camera_setup">Camera settings</string>
    <string name="always_align_camera_to_north">Always align camera to North</string>
    <string name="default_camera_zoom">Default camera zoom</string>
    <string name="zoom">Zoom</string>
    <string name="visualization_setup">Visualization settings</string>
    <string name="automatically_expand_nearby_denm_messages">Automatically expand nearby DENM messages</string>
    <string name="automatically_expand_nearby_mapem_spatem_messages">Automatically expand nearby MAPEM/SPATEM messages</string>
    <string name="automatic_expand_priority">Automatic expand priority</string>
    <string name="priority">Priority</string>
    <string name="draw_intersection_geometry">Draw intersection geometry</string>
    <string name="make_camera_track_user_selected_stations">Make camera track user selected stations</string>
    <string name="unknown_lane_type">Unknown lane type</string>
    <string name="tracked_vehicle">Tracked Vehicle</string>
    <string name="striping">Striping</string>
    <string name="median">Median</string>
    <string name="sidewalk">Sidewalk</string>
    <string name="bike_lane">Bike lane</string>
    <string name="crosswalk">Crosswalk</string>
    <string name="vehicle_lane">Vehicle lane</string>
    <string name="geometry_color_list">Geometry color list</string>
    <string name="enable_ui_testing_mode">Enable UI testing mode</string>
    <string name="play_sound_effect_when_auto_notification_expands">Play sound effect when auto notification expands</string>
    <string name="units">Units</string>
    <string name="return_to_gps_track">Always return to GPS tracking when tracked station is deleted</string>
    <string name="application_appearance">Application appearance</string>
    <string name="application_theme">Application theme</string>
    <string name="no_data">No data</string>
    <string name="no_data_yet">No data yet…</string>
</resources>